# TemplateAutomatization

./: .gitignore  1conftest.py  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
api/: api_client.py
api/models/: Issue_models.py
api/schemas/: issue_schemas.py
api/services/: issues.py
configs/: settings.py
data/: login_data.py
pages/: application.py  base_page.py  board_page.py  branch_page.py  create_repository_page.py  home_page.py  login_page.py  main_page.py  pulls_page.py  registration_page.py  workspace_home_page.py
pages/auth/: login_page.py  registration_page.py
tests/: conftest.py  test_home_page.py
tests/api/web/: conftest.py  test_home_page.py  test_issues.py  test_login_page.py  test_logn.py
tests/api/web/api_samples/: test_sample.py
tests/api/web/issues/: test_issues.py
tests/e2e/web/: 1conftest.py  conftest.py  test_e2e_registration.py  test_login_page.py  test_logn.py  test_repository_page.py
tests/ui/mobile/android/: conftest.py  test_wikipedia.py
tests/ui/mobile/ios/: conftest.py  test_wikipedia.py
tests/ui/web/: conftest.py  test_pull_requests.py
tests/ui/web/auth/: conftest.py  test_login_page.py
tests/ui/web/main_page/: conftest.py  test_main_page.py
tests/ui/web/pull_requests/: conftest.py  test_pulls_page.py
utils/decorators/: auth.py  common.py  ui.py
utils/utils_data/: helpers.py  test_data_factory.py
utils/utils_debug/: debug_instruments.py
utils/utils_loggers/: attach.py  responce_content.py  utils_log_inf.py
utils/utils_pages/: utils_account.py
