[project]
name = "templateautomatization"
version = "0.1.0"
description = ""
authors = [
    {name = "L4m4w",email = "l4p41@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "selenium (>=4.31.0,<5.0.0)",
    "selene (>=1.0.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
